--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -29,7 +29,7 @@ jobs:
     needs: build_and_push_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
