--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -21,6 +21,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Copy SECRET_KEY to container
+        run: |
+          echo ${{ secrets.PRIVATE_KEY }} > key.json
+          docker cp key.json calendar_backend:/key.json
+
       - name: Push backend to Docker Hub
         uses: docker/build-push-action@v2 
         with:
