--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -12,26 +12,26 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Copy secret key to repository
+        run: |
+          echo ${{ secrets.PRIVATE_KEY }} > private.key
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker 
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Copy SECRET_KEY to container
-        run: |
-          echo ${{ secrets.PRIVATE_KEY }} > key.json
-          docker cp key.json calendar_backend:/key.json
-
-      - name: Push backend to Docker Hub
-        uses: docker/build-push-action@v2 
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
         with:
-          context: ./
+          context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/calendar_backend:v1
+          tags:
+            ${{ secrets.DOCKER_USERNAME }}/calendar_backend:v1
 
   deploy:
     runs-on: ubuntu-latest
