--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Copy secret key to repository
         run: |
-          echo ${{ secrets.PRIVATE_KEY }} > private.key
+          echo "${{ secrets.PRIVATE_KEY }}" > private.key
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
