--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - PRIVATE_KEY=private.key
     volumes:
       - ./private.key:/private.key
+      - ./home/diagram/:/app
 
 #  nginx:
 #    image: nginx:1.18.0-alpine
