--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -55,4 +55,4 @@ jobs:
             echo CALENDAR_ID=${{ secrets.CALENDAR_ID }} >> .env.calendar
             
             sudo docker compose pull yohimbe/calendar_backend:v1
-            sudo docker compose up -d
+            sudo docker compose /home/docker-compose.yml up -d
