--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -56,4 +56,4 @@ jobs:
             echo CALENDAR_ID=${{ secrets.CALENDAR_ID }} >> .env.calendar
             
             sudo docker compose pull yohimbe/calendar_backend:v1
-            sudo docker compose  -f /home/docker-compose.calendar.yml up -d
+            sudo docker compose  -f /home/calendar/docker-compose.yaml up -d
