--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -31,7 +31,7 @@ jobs:
           context: .
           push: true
           tags:
-            yohimbe/calendar_backend:latest
+            yohimbe/calendar_backend:v1
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,5 +55,5 @@ jobs:
             echo FILE_PATH=${{ secrets.FILE_PATH }} >> .env.calendar
             echo CALENDAR_ID=${{ secrets.CALENDAR_ID }} >> .env.calendar
             
-            sudo docker compose pull yohimbe/calendar_backend:latest
+            sudo docker compose pull yohimbe/calendar_backend:v1
             sudo docker compose  -f /home/calendar/docker-compose.yaml up -d
