--- a/docker-compose.calendar.yml
+++ b/docker-compose.calendar.yml
@@ -6,12 +6,12 @@ services:
     environment:
       - PRIVATE_KEY=key.json
     env_file:
-      - .env
+      - .env.calendar
     volumes:
       - ./key.json:/key.json
       - ./diagram:/app
       - ./home/calendar/.env.calendar:/app/.env.calendar
-    command: cat /app/.env.calendar
+
 
 #  nginx:
 #    image: nginx:1.18.0-alpine
