--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -39,6 +39,10 @@ jobs:
     steps:
       - name: executing remote ssh commands to deploy
         if: ${{ github.ref == 'refs/heads/master' }}
+        env:
+          ENV_FILE: ${{ secrets.ENV_CALENDAR }}
+        run: |
+          echo $ENV_FILE
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
