--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -37,12 +37,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
-      - name: executing remote ssh commands to deploy
-        if: ${{ github.ref == 'refs/heads/master' }}
+      - name: make env data
+
         env:
           ENV_FILE: ${{ secrets.ENV_CALENDAR }}
         run: |
           echo $ENV_FILE
+      - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
