--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -37,12 +37,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
-      - name: make env data
-
-        env:
-          ENV_FILE: ${{ secrets.ENV_CALENDAR }}
-        run: |
-          echo $ENV_FILE
+#      - name: make env data
+#
+#        env:
+#          ENV_FILE: ${{ secrets.ENV_CALENDAR }}
+#        run: |
+#          echo $ENV_FILE
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -54,7 +54,6 @@ jobs:
             sudo rm .env.calendar
             sudo touch .env.calendar
             sudo docker compose pull backend
-            
             echo TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} >> .env.calendar
             echo TELEGRAM_TO=${{ secrets.TELEGRAM_TO }} >> .env.calendar
             echo SCOPES=${{ secrets.SCOPES }} >> .env.calendar
