--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -1,6 +1,6 @@
 name: calendar_income workflow
 
-on: [push]
+on: [ push ]
 
 jobs:
 
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker 
+      - name: Login to Docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -31,18 +31,18 @@ jobs:
           context: .
           push: true
           tags:
-            yohimbe/calendar_backend:v1
+            yohimbe/calendar_backend:v2
 
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
-#      - name: make env data
-#
-#        env:
-#          ENV_FILE: ${{ secrets.ENV_CALENDAR }}
-#        run: |
-#          echo $ENV_FILE
+      #      - name: make env data
+      #
+      #        env:
+      #          ENV_FILE: ${{ secrets.ENV_CALENDAR }}
+      #        run: |
+      #          echo $ENV_FILE
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -53,7 +53,11 @@ jobs:
             cd /home/calendar
             sudo rm .env.calendar
             sudo touch .env.calendar
+            
+            sudo docker-compose stop backend
+            sudo docker-compose rm -f backend
             sudo docker compose pull backend
+            
             echo TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} >> .env.calendar
             echo TELEGRAM_TO=${{ secrets.TELEGRAM_TO }} >> .env.calendar
             echo SCOPES=${{ secrets.SCOPES }} >> .env.calendar
