--- a/docker-compose.calendar.yml
+++ b/docker-compose.calendar.yml
@@ -13,7 +13,7 @@ services:
 #    env_file:
 #      - .env.calendar
     volumes:
-      - ./key.json:/key.json
+#      - ./key.json:/key.json
       - ./diagram/diagram.html:/app/diagram.html
 #      - ./home/calendar/.env.calendar:/app/.env.calendar
 
