--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -18,7 +18,7 @@ jobs:
           echo ::set-output name=encoded::${BASE64_SECRET}
       - name: Decode into JSON file
         run: |
-          echo $ENCODED | base64 --decode > file.json
+          echo $ENCODED | base64 --decode > key.json
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
