--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -15,7 +15,13 @@ jobs:
         id: encode
         run: |
           echo ${{ secrets.KEY_JSON }} | base64
-          ENCODED_KEY_JSON=`echo ${{ secrets.KEY_JSON }} | base64`
+          ENCODED_KEY_JSON=`echo \*\*\* \
+          \*\*\* \
+          \*\*\* \
+          \*\*\* \
+          \*\*\* \
+          \*\*\* \ 
+          \*\*\* | base64`
       - name: Decode into JSON file
         run: |
           echo $ENCODED_KEY_JSON | base64 --decode > key.json
