--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,15 +15,11 @@ services:
 #    volumes:
 #      - /home/calendar:/app/diagram
 #      - ./home/calendar/.env.calendar:/app/.env.calendar
-  copy_diagram:
-    command: docker run -d --name income_copy income
-
-#  nginx:
-#    image: nginx:1.18.0-alpine
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-#      - static_value:/var/html/static/
-#      - media_value:/var/html/media/
-
+  nginx:
+    image: nginx:1.18.0-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - income
