--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - SCOPES=https://www.googleapis.com/auth/calendar
       - FILE_PATH=key.json
       - CALENDAR_ID=kamanchi22@gmail.com
+
 #    env_file:
 #      - .env.calendar
 #    volumes:
@@ -18,8 +19,8 @@ services:
   nginx:
     image: nginx:1.18.0-alpine
     ports:
-      - "80:80"
+      - "8001:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - income
