--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
   nginx:
     image: nginx:alpine
     volumes:
-      - /home/calendar:/usr/share/nginx/html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - home/calendar:/usr/share/nginx/html
+      - home/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "8001:80"
+      - "80:80"
     restart: always
