--- a/.github/workflows/income_workflow.yml
+++ b/.github/workflows/income_workflow.yml
@@ -47,17 +47,16 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /home/calendar
-            #            sudo rm .env.calendar
-            #            sudo touch .env.calendar
+            sudo rm .env.calendar
+            sudo touch .env.calendar
             
-
             sudo docker compose rm -f income
             sudo docker compose pull income
-            #            echo TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} >> .env.calendar
-            #            echo TELEGRAM_TO=${{ secrets.TELEGRAM_TO }} >> .env.calendar
-            #            echo SCOPES=${{ secrets.SCOPES }} >> .env.calendar
-            #            echo FILE_PATH=${{ secrets.FILE_PATH }} >> .env.calendar
-            #            echo CALENDAR_ID=${{ secrets.CALENDAR_ID }} >> .env.calendar
+            echo TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} >> .env.calendar
+            echo ID=${{ secrets.TELEGRAM_TO }} >> .env.calendar
+            echo SCOPES=${{ secrets.SCOPES }} >> .env.calendar
+            echo FILE_PATH=${{ secrets.FILE_PATH }} >> .env.calendar
+            echo CALENDAR_ID=${{ secrets.CALENDAR_ID }} >> .env.calendar
             sudo docker compose up -d
             sudo docker compose exec -T income python start.py
             sudo docker cp calendar-income-1:/app/diagram/diagram.html /home/calendar/diagram.html
