--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ version: '3.3'
 services:
   income:
     image: yohimbe/calendar_backend:v2
+
     env_file:
-      - .env
+      - .env.calendar
 
   nginx:
     image: nginx:alpine
